[build-system]
requires = ["scikit-build-core","Cython >= 0.29","numpy"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.5"

[tool.scikit-build.sdist]
include = [
    "/CMakeLists.txt",
    "/include/poly_ops/*.hpp",
    "/LICENSE.txt",
    "/py",
    "/pyproject.toml",
    "/tests/test_data"]
exclude = ["*"]

[tool.scikit-build.cmake]
minimum-version = "3.19"
build-type = "Release"

[project]
name = "polyops"
version = "0.0.1"
description = "Operations on polygons"
readme = "py/README.md"
authors = [{name="Rouslan Korneychuk",email="rouslank@msn.com"}]
keywords = ["polygon","inset","outset","geometry","boolean","union"]
license = {file="LICENSE.txt"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics"]
dependencies = ["numpy"]
